--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my Portfolio</title>
+    <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,7 +15,7 @@
   <body>
     <!-- Navbar  Section Start -->
     <header>
-      <a href="#" class="logo">Ihab <span> Najeeb</span>.</a>
+      <a href="#" class="logo">ihab <span> najeeb</span>.</a>
 
       <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -46,8 +46,8 @@
       </div>
       <div class="home-text">
         <span>Hello, I'm</span>
-        <h1>Ihab Najeeb</h1>
-        <h2>BSC.Computer Science</h2>
+        <h1>John Doe</h1>
+        <h2>Fullstack Developer</h2>
         <p>
           Lorem ipsum dolor sit amet cons <br />
           adipisicing elit. Minima, consectetur <br />
@@ -79,17 +79,17 @@
           <div class="information">
             <div class="info-box">
               <i class="bx bxs-user"></i>
-              <span>Ihab Najeeb</span>
+              <span>John Doe</span>
             </div>
 
             <div class="info-box">
               <i class="bx bxs-phone"></i>
-              <span>+91 7900168498</span>
+              <span>+91 9876543210</span>
             </div>
 
             <div class="info-box">
               <i class="bx bxs-envelope"></i>
-              <span>najeebi22cs@mes.ac.in</span>
+              <span>csipce@mes.ac.in</span>
             </div>
           </div>
         </div>
@@ -175,7 +175,7 @@
     <!-- Services Section End -->
 
     <!-- Contact Section End -->
-    <div class="copyright">© ihab najeeb | All Right Reserved.</div>
+    <div class="copyright">© John Doe | All Right Reserved.</div>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
